--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                   <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="testimonal.html">Testimonals</a>
+                  <a class="nav-link" href="testimonials.html">Testimonials</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact</a>
