--- a/testimonials.html
+++ b/testimonials.html
@@ -21,6 +21,7 @@
     }
     .grid > article img {
       max-width: 100%;
+      /* max-height:; */
     }
     .grid .text {
       padding: 20px;
@@ -83,41 +84,41 @@
     <article>
       <img src="https://picsum.photos/600/400?image=1083" alt="Sample photo">
       <div class="text">
-        <h3>Seamlessly visualize quality</h3>
-        <p>Collaboratively administrate empowered markets via plug-and-play networks.</p>
-        <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
+        <h3>Alex Sexwale</h3>
+        <p>-Lecturer</p>
+        <p>Here's why</p>
       </div>
     </article>
     <article>
-      <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
+      <img src="images/Emihle2-min.JPG" alt="Sample photo">
       <div class="text">
-        <h3>Completely Synergize</h3>
-        <p>Dramatically engage seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing.</p>
-        <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's how</a>
+        <h3>Emihle Cebisa</h3>
+        <p>-Colleague</p>
+        <p>Hannah is a team player and she is friendly.</p>
       </div>
     </article>
     <article>
-      <img src="https://picsum.photos/600/400?image=1056" alt="Sample photo">
+      <img src="images/d-min(1).jpg" alt="Sample photo">
       <div class="text">
-        <h3>Dynamically Procrastinate</h3>
-        <p>Completely synergize resource taxing relationships via premier niche markets.</p>
-        <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Read more</a>
+        <h3>DarrenPetersen</h3>
+        <p>-Colleague</p>
+        <p>Hannah is an honest,humble and hardworking individual.Who can adapt to most situations and is always willing to help when needed.</p>
       </div>
     </article>
     <article>
-      <img src="https://picsum.photos/600/400?image=1050" alt="Sample photo">
+      <img src="images/a-min.jpg" alt="Sample photo">
       <div class="text">
-        <h3>Best in class</h3>
-        <p>Imagine jumping into that boat, and just letting it sail wherever the wind takes you...</p>
-        <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Just do it...</a>
+        <h3>Amaarah January</h3>
+        <p>-Colleague</p>
+        <p> Hannah is a wonderful person to work with.She is very helpful and patient and will always do her very best.</p>>
       </div>
     </article>
     <article>
       <img src="https://picsum.photos/600/400?image=1041" alt="Sample photo">
       <div class="text">
-        <h3>Dynamically innovate supply chains</h3>
-        <p>Holisticly predominate extensible testing procedures for reliable supply chains.</p>
-        <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
+        <h3>Zharne Desember</h3>
+        <p>-Colleague</p>
+        <>Here's why</>
       </div>
     </article>
     <article>
