--- a/testimonials.html
+++ b/testimonials.html
@@ -106,7 +106,7 @@
       </div>
     </article>
     <article>
-      <img src="images/a-min.jpg" alt="Sample photo">
+      <img src="images/Amaarah3-min.JPG" alt="Sample photo">
       <div class="text">
         <h3>Amaarah January</h3>
         <p>-Colleague</p>
@@ -114,19 +114,19 @@
       </div>
     </article>
     <article>
-      <img src="https://picsum.photos/600/400?image=1041" alt="Sample photo">
+      <img src="images/Zharne2-min.JPG" alt="Sample photo">
       <div class="text">
         <h3>Zharne Desember</h3>
         <p>-Colleague</p>
-        <>Here's why</>
+        <>Hannah is a hardworking person and is always willing to help others. She works well in a team and is dedicated to her work.</>
       </div>
     </article>
     <article>
-      <img src="https://picsum.photos/600/400?image=1015" alt="Sample photo">
+      <img src="images/t-min.jpg" alt="Sample photo">
       <div class="text">
-        <h3>Sanity check</h3>
-        <p>Objectively innovate empowered manufactured products whereas parallel platforms.</p>
-        <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Stop here</a>
+        <h3>Ndiphiwe Ngxola</h3>
+        <p>-Colleague</p>
+        <p>Hannah is a fun person t work with. She is a hardworking person with loads of potential and brimming with optimism. She is extremly driven and task orientated</p>
       </div>
     </article>
   </main>
