--- a/about.html
+++ b/about.html
@@ -52,15 +52,15 @@
               </div>
               <p>CSS</p>
               <div class="container">
-                <div class="skills css">80%</div>
+                <div class="skills css">85%</div>
               </div>
-              <p>JavaScript</p>
+              <p>bootstrap</p>
               <div class="container">
-                <div class="skills js">65%</div>
+                <div class="skills js">50%</div>
               </div>
-              <p>PHP</p>
+              <p>GitHub</p>
               <div class="container">
-                <div class="skills php">60%</div>
+                <div class="skills php">80%</div>
               </div>   
             </div>
             <!-- Experience Timeline -->
