--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
               <div class="container">
                 <div class="skills css">85%</div>
               </div>
-              <p>bootstrap</p>
+              <p>Bootstrap</p>
               <div class="container">
                 <div class="skills js">50%</div>
               </div>
