--- a/testimonials.html
+++ b/testimonials.html
@@ -90,7 +90,7 @@
       <div class="text">
         <h3>Alex Sexwale</h3>
         <p>-Lecturer</p>
-        <p>Here's why</p>
+        <p>She is dedicated and hard working hardworking.She goes the extra mile to solving any problem.</p>
       </div>
     </article>
     <article>
