--- a/about.html
+++ b/about.html
@@ -40,14 +40,49 @@
         </div>
       </div>
     </nav>
-    <div id="abouttext" class="col-lg-6 col-sm-12 text-center text-md-start">
+    <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
+      <a class="navbar-brand" href="#">About Me</a>
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link" href="#scrollspyHeading1">First</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#scrollspyHeading2">Second</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#scrollspyHeading3">Third</a></li>
+            <li><a class="dropdown-item" href="#scrollspyHeading4">Fourth</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#scrollspyHeading5">Fifth</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+    <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
+      <h4 id="scrollspyHeading1">First heading</h4>
+      <p>...</p>
+      <h4 id="scrollspyHeading2">Second heading</h4>
+      <p>...</p>
+      <h4 id="scrollspyHeading3">Third heading</h4>
+      <p>...</p>
+      <h4 id="scrollspyHeading4">Fourth heading</h4>
+      <p>...</p>
+      <h4 id="scrollspyHeading5">Fifth heading</h4>
+      <p>...</p>
+    </div>
+    
+    
+<!-- scroll end    -->
+    <div id="abouttext" class="col-lg-12 col-sm-12 text-center text-md-start">
       <h1 id="header-text"><div class="display-5 fw-bold">About</div></h1>
       <br><p>hchduchauchuahcuhcuhcuhc jdjdjdj jcjdjd djjdjdn jdjdjd jdjdjdj jdjdjbdjdjdjjd hdhdhd jdhdhdh jsjdjdjdjdjdbbcdbc cdbcbc bcbcbc cbcbcbc bcbcbcb cbcbcbbc bcbcbcbc bcbcbc bcbcbc</p>
   </div>
     <div class="container-lg">
         <div class="row justify-content-center align-items-center">
           <!-- Skills -->
-          <div class="col-lg-6 col-md-6 col-12">
+          <div class="col-lg-12 col-md-6 col-12">
             <div id="skills" class="col-lg-12 col-md-12 col-12 text-center text-md-start">          
               <p>HTML</p>
               <div class="container">
@@ -66,102 +101,9 @@
                 <div class="skills php">80%</div>
               </div>   
             </div>
-            <!-- Experience Timeline -->
-            <div class="text-center d-md-block">
-              <div class="wrapper">
-                <div class="center-line">
-                  <a href="https://en.wikipedia.org/wiki/Wiki" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
-                </div>
-                <div class="row row-1">
-                  <section>
-                    <i class="icon fas fa-home"></i>
-                    <div class="details">
-                      <span class="title">Student at Life Choices</span>
-                      <span>20th Sep 2021</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                    <div class="bottom">
-                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
-                      <i>- Claire</i>
-                    </div>
-                  </section>
-                </div>
-                <div class="row row-2">
-                  <section>
-                    <i class="icon fas fa-star"></i>
-                    <div class="details">
-                      <span class="title">Gap "Year"</span>
-                      <span></span>
-                    </div>
-                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                    <div class="bottom">
-                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
-                      <i>- Gloria</i>
-                    </div>
-                  </section>
-                </div>
-                <div class="row row-1">
-                  <section>
-                    <i class="icon fas fa-rocket"></i>
-                    <div class="details">
-                      <span class="title">Matriculation</span>
-                      <span>3rd December 2020</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                    <div class="bottom">
-                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
-                      <i>- Lily</i>
-                    </div>
-                  </section>
-                </div>
-                <div class="row row-2">
-                  <section>
-                    <i class="icon fas fa-globe"></i>
-                    <div class="details">
-                      <span class="title">Subject picking</span>
-                      <span>4th Aug 2016</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                    <div class="bottom">
-                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
-                      <i>- Mitchel</i>
-                    </div>
-                  </section>
-                </div>
-                <div class="row row-1">
-                  <section>
-                    <i class="icon fas fa-paper-plane"></i>
-                    <div class="details">
-                      <span class="title">Start of High School</span>
-                      <span>5th Jan 2021</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                    <div class="bottom">
-                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
-                      <i>- Jay</i>
-                    </div>
-                  </section>
-                </div>
-                <div class="row row-2">
-                  <section>
-                    <i class="icon fas fa-map-marker-alt"></i>
-                    <div class="details">
-                      <span class="title">End of Primary School</span>
-                      <span>6th Jan 2021</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                    <div class="bottom">
-                      <a href="https://en.wikipedia.org/wiki/Wiki">Read more</a>
-                      <i>- Phil</i>
-                    </div>
-                  </section>
-                </div>
-              </div>  
-            </div>
-          </div>
     <!-- end -->
-</div>
-</div> 
+    </div>
+  </div> 
 <br><br><br><br><br><br><br><br><br><br><!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted ">
     <!-- Section: Social media -->
