--- a/index.html
+++ b/index.html
@@ -9,8 +9,78 @@
       @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap');
       </style> 
     <title>Hannah Dalwai</title>
-</head>
+<style>body {
+  background: rgb(43,78,104);
+  color: black;
+  font-family: 'Fira Code', monospace;
+}
+.typewriter {
+  position: absolute;
+  top: 35%;
+  left: 10%;
+}
+.typewriter h1 {
+  border-right: 1px solid white;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 390px;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typewriter 2s steps(25) 1s 1 normal both;
+}
+.typewriter #line-1 {
+  border-right: 1px solid white;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 425px;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typewriter 3s steps(40) 1s 1 normal both;
+  animation-delay: 3.5s;
+}
+#line-2 {
+  border-right: 1px solid white;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 405px;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typewriter 3s steps(40) 1s 1 normal both;
+  animation-delay: 7s;
+}
+@keyframes typewriter {
+  0% {
+    width: 0;
+    border-right: none;
+  }
+  0.1% {
+    border-right: 1px solid rgb(220,220,220);
+  }
+  99.9% {
+    border-right: 1px solid rgb(220,220,220);
+  }
+  100% {
+    border: none;
+  }
+}
+i {
+opacity: 0;
+animation: fadeIn 2s ease-in-out;
+animation-delay: 10s;
+animation-fill-mode: forwards;
+padding-top: 1rem;
+padding-left: 20px;
 
+}
+a {
+  color: rgb(220,220,220);
+}
+@keyframes fadeIn {
+from {opacity:0;}
+to {opacity:1;}
+}
+</style>
+</head>
 <body id="bgimg">
      
     <!-- navbar -->
@@ -49,14 +119,26 @@
                   <img id="Hpicture" class="img-fluid" src="images/me-min(1).jpg" alt="">
               </div> 
               <div class="col-lg-6 col-sm-12 text-center text-md-start">
-                  <h1 id="header-text">
+
+<!-- animated text -->
+<div class="typewriter">
+  <h1>I'm Hannah Dalwai</h1>
+  
+  <p id="line-1">An Apiring fullstack developer</p>
+  <p id="line-2">view CV here</p>
+  <a href="mailto:di.lisova@gmail.com" target="_blank"><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
+  </div>
+  
+  
+<!-- end -->
+                  <!-- <h1 id="header-text">
                       <div class="display-5 fw-bold">My name is Hannah Dalwai.</div>
                       <div class="display-6 text-dark fw-bold">Aspiring fullstack developer</div>
                       <br><h2 id="h2ftw">Student at Life Choices Academy</h2>
                   </h1>
                   <a href="#pricing" class="btn btn-secondary btn-lg">View CV</a>
               </div>
-         </div>
+         </div> -->
       </div> <br><br><br><br><br><br><br><br><br><br>
     <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted fixed-auto">
