--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ to {opacity:1;}
          </div> -->
       </div> <br><br><br><br><br><br><br><br><br><br>
     <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted fixed-auto">
+<footer class="text-center text-lg-start bg-light text-muted fixed-auto" style="padding: 0px;">
     <!-- Section: Social media -->
     <section
       class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom" >
@@ -168,7 +168,7 @@ to {opacity:1;}
     
     <!-- Section: Links  -->
     <section class="">
-      <div class="container text-center text-md-start mt-5">
+      <div class="container text-center text-md-start mt-5" style="max-width: 100%; padding: 0cm;">
         <!-- Grid row -->
         <div class="row mt-3">
           <!-- Grid column -->
