--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,13 @@
       </div>
       <div class="mb-3">
         <button class="btn btn-primary" type="submit">Submit</button>
+        <a href="#">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          Button
+        </a>
       </div>
     </form>
   </div>
