--- a/index.html
+++ b/index.html
@@ -46,74 +46,28 @@
     </section>
     <!-- skills -->
     <section id="skills" >
-     <div class="container-lg">
-        <div class="row justify-content-center align-items-center">
-            <div class="col-lg-6 col-md-12 col-sm-12 text-center text-md-start float-start">
-                <p>HTML</p>
-                <div class="container">
-                  <div class="skills html">90%</div>
-                </div>
-                <p>CSS</p>
-                <div class="container">
-                  <div class="skills css">85%</div>
-                </div>
-                <p>Bootstrap</p>
-                <div class="container">
-                  <div class="skills js">50%</div>
-                </div>
-                <p>GitHub</p>
-                <div class="container">
-                  <div class="skills php">80%</div>
-                </div> 
-                <div class="col-lg-6 col-md-12 col-sm-12 text-center d-md-block float-end" >
-                <p>HTML</p>
-                <div class="container">
-                  <div class="skills html">90%</div>
-                </div>
-                <p>CSS</p>
-                <div class="container">
-                  <div class="skills css">85%</div>
-                </div>
-                <p>Bootstrap</p>
-                <div class="container">
-                  <div class="skills js">50%</div>
-                </div>
-                <p>GitHub</p>
-                <div class="container">
-                  <div class="skills php">80%</div>
-                </div> </div> 
-              </div>
-
-        </div>
-
-            <div class="col-lg-6 col-md-12 col-sm-12 text-center d-md-block float-end" >
-                <p>HTML</p>
-                <div class="container">
-                  <div class="skills html">90%</div>
-                </div>
-                <p>CSS</p>
-                <div class="container">
-                  <div class="skills css">85%</div>
-                </div>
-                <p>Bootstrap</p>
-                <div class="container">
-                  <div class="skills js">50%</div>
-                </div>
-                <p>GitHub</p>
-                <div class="container">
-                  <div class="skills php">80%</div>
-                </div>   
-              </div> 
-
-            </div>
-       </div>
-    </div> 
 
 
     </section>
     <!-- about -->
     <section id="about" >
-
+        <center>
+        <h1>GeeksforGeeks</h1>
+        <div class="scroll">It is a good platform to learn programming. 
+        It is an educational website. Prepare for the Recruitment drive
+        of product based companies like Microsoft, Amazon, Adobe etc with
+        a free online placement preparation course. The course focuses 
+        on various MCQ's & Coding question likely to be asked in the 
+        interviews & make your upcoming placement season efficient and 
+        successful. Also, any geeks can help other geeks by writing 
+        articles on the GeeksforGeeks, publishing articles follow few 
+        steps that are Articles that need little modification/improvement
+        from reviewers are published first. To quickly get your articles
+        reviewed, please refer existing articles, their formatting style,
+        coding style, and try to make you are close to them. In case you
+        are a beginner, you may refer Guidelines to write an Article
+        </div>
+        </center>
     </section>
     <!-- portfolio -->
     <section id="portfolio" >
@@ -286,7 +240,7 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-gem me-3"></i>Cliff Hangout
+              <i class="fas fa-gem me-3"></i>Hannah Dalwai
             </h6>
           </div>
           <!-- Grid column -->
@@ -296,13 +250,13 @@
               Links
             </h6>
             <p>
-              <a href="#!" class="text-reset"><i class="bi bi-linkedin"> </i>Github</a>
+              <a href="#!" class="text-reset"><img src="images/211904_social_github_icon.png" alt="" style="height: 20px;"> </i>Github</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><img src="images/netlifyicon.png" alt="" style="height: 20px; color: grey;" ></i>Netlify</a>
+              <a href="#!" class="text-reset"><img src="images/netlifyicon.png" alt=""style="height: 20px;" >  Netlify</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><i class="bi bi-linkedin"></i></i>Linkdin</a>
+              <a href="#!" class="text-reset"><img src="images/5282542_linkedin_network_social network_linkedin logo_icon.png" alt="" style="height: 20px;">  Linkdin</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -313,13 +267,13 @@
             <h6 class="text-uppercase fw-bold mb-4">
               Contact
             </h6>
-            <p><i class="fas fa-home me-3"></i><i class="bi bi-geo-alt"></i> 123 Imaam Road, CT 10012, South Africa</p>
+            <p><img src="images/352521_location_on_icon.png" alt="" style="height: 20px;"> I am based in Cape Town, South Africa</p>
             <p>
               <i class="fas fa-envelope me-3"></i>
               <i class="bi bi-envelope-open"></i> hannahdalwai4@gmail.com
             </p>
-            <p><i class="fas fa-phone me-3"></i><i class="bi bi-telephone"></i> Contact Number </p>
-            <p><i class="fas fa-print me-3"></i><i class="bi bi-telephone"></i> + 27 74 525 0800</p>
+            <p><img src="images/134148_phone_call_telephone_icon.png" alt="" style="height: 20px;"> Contact Number </p>
+            <p><img src="images/134148_phone_call_telephone_icon.png" alt="" style="height: 20px;">  + 27 74 525 0800</p>
           </div>
           <!-- Grid column -->
         </div>
