--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </nav> 
     <!-- home -->
     <section id="home">
-
+        <div class="centered">Moving clouds background animation.</div>
     </section>
     <!-- skills -->
     <section id="skills" >
@@ -219,7 +219,6 @@
             </div>
     </section>
 <!-- end -->                  
-      </div> <br><br><br><br><br><br><br><br><br><br>
     <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted fixed-auto">
     <!-- Section: Social media -->
@@ -250,13 +249,13 @@
               Links
             </h6>
             <p>
-              <a href="#!" class="text-reset"><img src="images/211904_social_github_icon.png" alt="" style="height: 20px;"> </i>Github</a>
+              <a href="#!" target="_blank" class="text-reset"><img src="images/211904_social_github_icon.png" alt="" style="height: 20px;"> </i>Github</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><img src="images/netlifyicon.png" alt=""style="height: 20px;" >  Netlify</a>
+              <a href="#!"target="_blank" class="text-reset"><img src="images/netlifyicon.png" alt=""style="height: 20px;" >  Netlify</a>
             </p>
             <p>
-              <a href="#!" class="text-reset"><img src="images/5282542_linkedin_network_social network_linkedin logo_icon.png" alt="" style="height: 20px;">  Linkdin</a>
+              <a href="#!"target="_blank" class="text-reset"><img src="images/5282542_linkedin_network_social network_linkedin logo_icon.png" alt="" style="height: 20px;">  Linkdin</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -269,8 +268,7 @@
             </h6>
             <p><img src="images/352521_location_on_icon.png" alt="" style="height: 20px;"> I am based in Cape Town, South Africa</p>
             <p>
-              <i class="fas fa-envelope me-3"></i>
-              <i class="bi bi-envelope-open"></i> hannahdalwai4@gmail.com
+              <img src="images/2203552_email_inbox_letter_send_icon.png" alt="" style="height: 20px;"> Email hannahdalwai4@gmail.com
             </p>
             <p><img src="images/134148_phone_call_telephone_icon.png" alt="" style="height: 20px;"> Contact Number </p>
             <p><img src="images/134148_phone_call_telephone_icon.png" alt="" style="height: 20px;">  + 27 74 525 0800</p>
@@ -290,6 +288,7 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
+
 <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
