--- a/index.html
+++ b/index.html
@@ -11,18 +11,14 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"></i>empty</a>
+            <a class="navbar-brand" href="#"></i>Hannah Dalwai</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav nav nav-pills" >
-                
                 <li class="nav-item ">
                     <a class="nav-link " href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="#about">About</a>
@@ -42,11 +38,11 @@
         </nav> 
     <!-- home -->
     <section id="home">
-        <div class="centered">Moving clouds background animation.</div>
+        <div class="centered">I'm Hannah Dalwai <br>An aspiring fullstack developer</div>
+        
     </section>
-    <!-- skills -->
-    <section id="skills" >
-
+    <!-- green -->
+    <section id="green">
 
     </section>
     <!-- about -->
@@ -68,6 +64,43 @@
         are a beginner, you may refer Guidelines to write an Article
         </div>
         </center>
+<!-- skills -->
+        <div class="skills">
+            <div class="skills-bar">
+              <div class="bar">
+                <div class="info">
+                  <span>HTML</span>
+                </div>
+                <div class="progress-line"><span class="html"></span></div>
+                <div class="bar">
+                  <div class="info">
+                    <span>CSS</span>
+                  </div>
+                  <div class="progress-line"><span class="css"></span></div>
+                  <div class="bar">
+                    <div class="info">
+                      <span>BOOTSTRAP</span>
+                    </div>
+                    <div class="progress-line"><span class="bootstrap"></span></div>
+                    <div class="bar">
+                      <div class="info">
+                        <span>JAVASCRIPT</span>
+                      </div>
+                      <div class="progress-line">
+                        <span class="javascript"></span>
+                      </div>
+                      <div class="bar">
+                        <div class="info">
+                          <span>C Programming</span>
+                        </div>
+                        <div class="progress-line"><span class="c"></span></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
     </section>
     <!-- portfolio -->
     <section id="portfolio" >
