--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <ul class="cards">
               <li class="cards_item">
                 <div class="card">
-                  <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
+                  <div class="card_image"><img src="images/alex-min (2).jpg"></div>
                   <div class="card_content">
                     <h2 class="card_title">Alex Sexwale</h2>
                     <p>-Lecturer</p>
