--- a/index.html
+++ b/index.html
@@ -106,13 +106,16 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/fall-g93027d2b4_1920-min.jpg" alt="Los Angeles" class="d-block w-100">
+                <p><a href="https://inspiring-mirzakhani-8eea58.netlify.app/"target="_blank" class="text-reset"><img src="images/netlifyicon.png" alt=""style="height: 20px;" >   View in Netlify</a></p> <p><a href="https://github.com/HannahDalwai/bootstrap-online-store" target="_blank" class="text-reset"><img src="images/211904_social_github_icon.png" alt="" style="height: 20px;"> </i>View in Github</a></p>
+                <img src="images/projectstore-min.png" alt="Los Angeles" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="images/project1.png" alt="Chicago" class="d-block w-100">
+                <p><a href="https://youthful-meninsky-ee483a.netlify.app/"target="_blank" class="text-reset"><img src="images/netlifyicon.png" alt=""style="height: 20px;" >  Netlify</a></p><p><a href="https://github.com/HannahDalwai/bootstrap-online-store" target="_blank" class="text-reset"><img src="images/211904_social_github_icon.png" alt="" style="height: 20px;"> </i>View in Github</a></p>
+                <img src="images/projectweb-min.png" alt="Chicago" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="images/me-min(1).jpg" alt="New York" class="d-block w-100">
+                <p><a href="https://app.netlify.com/teams/hannahdalwai/overview"target="_blank" class="text-reset"><img src="images/netlifyicon.png" alt=""style="height: 20px;" >  Netlify</a></p><p><a href="https://github.com/HannahDalwai/Box" target="_blank" class="text-reset"><img src="images/211904_social_github_icon.png" alt="" style="height: 20px;"> </i>View in Github</a></p>
+                <img src="images/projecttravel-min.png" alt="New York" class="d-block w-100">
               </div>
             </div>
             <!-- Left and right controls/icons -->
