--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <h1 class="display-5">Skills</h1>
 <div class="container">
     <div class="row">
-        <div class="skills" style="margin-right: ;">
+        <div class="skills" style="margin-right:0 ;">
             <div class="skills-bar">
               <div class="bar">
                 <div class="info">
@@ -297,7 +297,7 @@
     </section>
     <!-- contact -->
     <section id="contact" >
-        <div id="contact" class="container-lg">
+        <div id="contact" class="container-lg" style="margin-top:0;">
             <div class="row justify-content-center align-items-center">
                 <form target="_blank" class="was-validated" method="post"  action="https://formspree.io/f/xqkwonnz">
                 <div class="mb-3">
@@ -314,11 +314,6 @@
                   <div class="invalid-feedback">
                     Please enter your email address here.
                   </div>
-                </div>
-                <div class="form-check mb-3">
-                  <input name="check" type="checkbox" class="form-check-input" id="validationFormCheck1" required>
-                  <label class="form-check-label" for="validationFormCheck1">I am Human</label>
-                  <div class="invalid-feedback">Check box to verify</div>
                 </div>
                 <div class="mb-3">
                   <select name="reason" class="form-select" required aria-label="select example">
